dark mode color fixes

--- a/src/global.css
+++ b/src/global.css
@@ -1,17 +1,17 @@
 @tailwind base;
 
 @layer base {
-    body{
-      @apply dark:bg-gray-800;
-    }
+  body {
+    @apply dark:bg-gray-950;
+  }
   h1 {
     @apply text-6xl font-semibold dark:text-gray-300;
   }
   h2 {
-    @apply text-4xl font-semibold dark:text-white; 
+    @apply text-4xl font-semibold dark:text-gray-100;
   }
   h3 {
-    @apply text-2xl font-semibold dark:text-white;
+    @apply text-2xl font-semibold dark:text-gray-100;
   }
 }
 
